welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:4: error: '(' expected but identifier found.
  if hasTeen(a,b) return 19
     ^